--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "fetch": "node crawler.js",
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
