--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -45,10 +45,17 @@ jobs:
       - name: Check for Changes
         id: verify_diff
         run: |
+          echo "Checking if file exists..."
           if [ ! -f weekly_issues.json ]; then
+            echo "File does not exist"
             echo "changed=true" >> $GITHUB_OUTPUT
           else
-            git diff --quiet weekly_issues.json || echo "changed=true" >> $GITHUB_OUTPUT
+            echo "File exists, checking for changes..."
+            git add weekly_issues.json
+            git diff --cached --quiet weekly_issues.json || {
+              echo "Changes detected"
+              echo "changed=true" >> $GITHUB_OUTPUT
+            }
           fi
           
       - name: Commit and Push
